[package]
name = "read_input"
version = "0.8.4"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = """
A simple CLI tool that asks for user input until the data inputted is valid.
"""
documentation = "https://docs.rs/read_input/"
homepage = "http://efunb.com/"
repository = "https://gitlab.com/efunb/read_input"
keywords = ["input", "console", "cli", "text", "simple"]
categories = [ "command-line-interface", "data-structures", "encoding", "rust-patterns" ]
edition = "2018"

[dev-dependencies]
dont_disappear = "3"
rand = "0.7"
chrono = "0.4"
url = "2.1"