[package]
name = "read_input"
version = "0.8.6"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = """
Ask for user input until the data inputted is valid
"""
documentation = "https://docs.rs/read_input/"
repository = "https://github.com/eopb/read_input"
keywords = ["input", "console", "cli", "text", "simple"]
categories = [ "command-line-interface", "rust-patterns" ]
edition = "2018"
exclude = ["examples/"]

[dev-dependencies]
dont_disappear = "3"
rand = "0.8"
chrono = "0.4"
url = "2.2"
